add google rechaptcha in register and reset password, add reset password validation

--- a/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model  OneListApplication.Models.RegisteredUserVM
+
 @{
     ViewBag.Title = "ResetPassword";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -13,12 +14,22 @@
     <div class="form-horizontal">
             <div class="form-group">
                 @*<label>Password:</label>*@
-                <input type="text" name="password" class="form-control" placeholder="Password"/><br>
+                @*<input type="text" name="password" class="form-control" placeholder="Password"/><br>*@
                 @*<label>Password Confirm:</label>*@
-                <input type="text" name="passwordConfirm" class="form-control" placeholder="Confirm Password" /><br />                <input type="submit" value="Submit" />
+                @*<input type="text" name="passwordConfirm" class="form-control" placeholder="Confirm Password" /><br />*@
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "New Password", @name= "password" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
+
+    @*<input type="password" class="form-control" placeholder="Create Password" required><br>*@
+                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", @placeholder = "Comfirm Password", @name = "passwordConfirm" } })
+                @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
+                <div class="g-recaptcha inp50 col-lg-10 col-lg-offset-1" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>                
                 <input type="hidden" name="passwordToken" value="@ViewBag.PasswordToken" />
                 <input type="hidden" name="userID" value="@ViewBag.UserID" />
+                <input type="submit" value="Submit" /><br />
+                @Html.Raw(ViewBag.Result)
           </div>
         </div>
 }
-@Html.Raw(ViewBag.Result)
+@Html.Raw(ViewBag.CaptchaResponse)
+
