--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
 
