add forget password validation and messages

--- a/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
@@ -23,7 +23,7 @@
     @*<input type="password" class="form-control" placeholder="Create Password" required><br>*@
                 @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", @placeholder = "Comfirm Password", @name = "passwordConfirm" } })
                 @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-                <div class="g-recaptcha inp50 col-lg-10 col-lg-offset-1" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>                
+                <div class="g-recaptcha inp50" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>                
                 <input type="hidden" name="passwordToken" value="@ViewBag.PasswordToken" />
                 <input type="hidden" name="userID" value="@ViewBag.UserID" />
                 <input type="submit" value="Submit" /><br />
@@ -31,5 +31,4 @@
           </div>
         </div>
 }
-@Html.Raw(ViewBag.CaptchaResponse)
 
