--- a/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
@@ -9,14 +9,30 @@
 @using (Html.BeginForm("ForgotPassword", "Home", new { ReturnUrl = ViewBag.ReturnUrl },
                         FormMethod.Post, new { @class = "col-lg-4 col-lg-offset-4" }))
 {
-   // @Html.AntiForgeryToken()
+    // @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
         <div class="form-group">
                 <p>Please submit the your email address</p>
-                <input type="text" name="email" class="form-control" placeholder="Email"/>
+                <input type="text" name="email" class="form-control" placeholder="Email"/><br />
                 <input type="submit" value="Submit" class="form-control"/>
         </div>
+        @{
+            if (ViewBag.Fail!=null)
+            {
+                <div class="text-danger">
+                    @Html.Raw(ViewBag.Fail)
+                </div>
+            }
+            else
+            {
+                <div class="text-success">
+                    @Html.Raw(ViewBag.Success)
+                </div>
+            }
+        }
+
+
     </div>
 }
 
