--- a/OneListApplication/OneListApplication/Views/Home/Register.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Register.cshtml
@@ -36,7 +36,7 @@
             <button class="btn btn-primary btn-register" type="submit">Register</button><br />
         </div>
         }
-        @Html.Raw(ViewBag.CaptchaResponse)
+        @Html.Raw(ViewBag.Result)
     </div>
     </div>
 </div>
