Displaying subscribed users on edit group page

--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                         {
                             <li>@Html.ActionLink("List", "ListManagement", "Home")</li>
                             <li>@Html.ActionLink("Item", "ItemManagement", "Item")</li>
-                            <li>@Html.ActionLink("Subscriber", "SubscriberManagement", "Home")</li>
+                            <li>@Html.ActionLink("Subscriber", "SubscriberGroupManagement", "Subscriber")</li>
                         }
                     }
                 </ul>
