--- a/OneListApplication/OneListApplication/Views/Subscriber/EditSubscriberGroup.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/EditSubscriberGroup.cshtml
@@ -8,7 +8,7 @@
 @Html.Partial("~/Views/Subscriber/_SubscriberSideBar.cshtml")
 <div class="col-md-10">
     <h2>Edit Subscriber Group</h2>
-
+    <!-- Form for New Group Title-->
     @using (Html.BeginForm("EditSubscriberGroup", "Subscriber", FormMethod.Post,
         new { enctype = "multipart/form-data" }))
     {
@@ -18,17 +18,17 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.SubscriberGroupID)
-            <!-- Input for New Group Title-->
             <div class="form-group">
                 @Html.LabelFor(model => model.SubscriberGroupName, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.SubscriberGroupName, new { htmlAttributes = new { @class = "" } })
                     @Html.ValidationMessageFor(model => model.SubscriberGroupName, "", new { @class = "text-danger" })
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Update" class="btn btn-default" />
                 </div>
             </div>
         </div>
     }
+    <!-- Form for Add User to group-->
     @using (Html.BeginForm("AddSubscriberToGroup", "Subscriber", FormMethod.Post,
                 new { enctype = "multipart/form-data" }))
     {
@@ -41,43 +41,16 @@
                 <label class="control-label col-md-2">Add Users to Group</label>
                 <div class="col-md-10">
                     @Html.DropDownListFor(m => m.subscribedUser.UserID, Model.UserList, htmlAttributes: new { @class = "" })
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Add" class="btn btn-default" />
                 </div>
             </div>
         </div>
     }
-    <!-- Display Current users in the Group-->
-    @if (Model.allSubscribedUsers.Count() > 0) {
-    <table class="table">
-        <tr>
-            <th>User ID</th>
-            <th>User Type ID</th>
-            <th>User Statuss</th>
-            <th></th>
-        </tr>
-        @foreach (var item in Model.allSubscribedUsers)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserID)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserTypeID)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ListUserStatus)
-                </td>
-                <td>
-                    @Html.ActionLink("Convert", "ConvertUserType", new { userId = item.UserID, id = item.SubscriberGroupID }, new { @class = "btn btn-primary" })
-                    @Html.ActionLink("Disable", "DisableSubscribedUser", new { userId = item.UserID, id = item.SubscriberGroupID }, new { @class = "btn btn-primary" })
-
-                    <a class="btn btn-danger" href="@Url.Action("DeleteItem", "Item", new { userId = item.UserID, id = item.SubscriberGroupID })"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-                </td>
-            </tr>
-        }
-
-    </table>
-    }
+    <!-- Display subscribed users if any-->
+@if (Model.allSubscribedUsers.Count() > 0)
+{
+    @Html.Partial("~/Views/Subscriber/_SubscriberTable.cshtml", Model)
+}
     <div>
         @Html.ActionLink("Back to List", "SubscriberGroupManagement")
     </div>
