added delete , ban and unban users for admin

--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -70,6 +70,9 @@
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                     <li>@Html.ActionLink("Assign Roles", "AddUserToRole", "Home")</li>
+                                    <li>@Html.ActionLink("Delete User", "DeleteUser", "Home")</li>
+                                    <li>@Html.ActionLink("Ban User", "BanUser", "Home")</li>
+                                    <li>@Html.ActionLink("Unban User", "UnbanUser", "Home")</li>
                                 </ul>
                             </li>
                         }
