--- a/OneListApplication/OneListApplication/Views/Subscriber/SubscriberGroupManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/SubscriberGroupManagement.cshtml
@@ -9,6 +9,9 @@
 
 <div class="col-md-10">
     <h2>All Subscriber Groups</h2>
+    <p class="text-danger">
+        @Html.Raw(ViewBag.ActionMsg)
+    </p>
     <table class="table">
         <tr>
             <th>
