--- a/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberTable.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberTable.cshtml
@@ -12,7 +12,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.SubscriberGroupUserID)
+                    @Html.DisplayFor(modelItem => item.UserID)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.UserTypeID)
@@ -21,10 +21,10 @@
                     @Html.DisplayFor(modelItem => item.ListUserStatus)
                 </td>
                 <td>
-                    @Html.ActionLink("Convert", "ConvertUserType", new { userId = item.SubscriberGroupUserID, id = Model.SubscriberGroupID }, new { @class = "btn btn-primary" })
-                    @Html.ActionLink("Disable", "DisableSubscribedUser", new { userId = item.SubscriberGroupUserID, id = Model.SubscriberGroupID }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Convert", "ConvertUserType", new { userId = item.UserID, id = Model.SubscriberGroupID }, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Disable", "DisableSubscribedUser", new { userId = item.UserID, id = Model.SubscriberGroupID }, new { @class = "btn btn-primary" })
 
-                    <a class="btn btn-danger" href="@Url.Action("DeleteSubscriber", "Subscriber", new { userId = item.SubscriberGroupUserID, id = Model.SubscriberGroupID })"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+                    <a class="btn btn-danger" href="@Url.Action("DeleteSubscriber", "Subscriber", new { userId = item.UserID, id = Model.SubscriberGroupID })"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
                 </td>
             </tr>
         }
