--- a/OneListApplication/OneListApplication/Views/Home/Login.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Login.cshtml
@@ -32,7 +32,7 @@
                 </div>
                 <div id="remember" class="checkbox">
                     <label class="form-check-label">
-                        <input value="remember-me" type="checkbox"> Remember Me
+                        <input name="rememberMe" type="checkbox" value="true"> Remember Me
                     </label>
                 </div>
                 <button class="btn btn-primary btn-signin" type="submit">Sign in</button><br />
