added user to front page

--- a/OneListApplication/OneListApplication/Views/Home/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Index.cshtml
@@ -11,6 +11,23 @@
         <h4>Check Out Our<a href="~/Home/GetDesignDocument"> Design Document</a></h4>
     </div>
     <p>Your ultimate solution to organize daily tasks, OneList can help increase efficency, register today for free.</p>
+    <table>
+        <tr>
+            <th>User Role</th>
+            <th>Username</th>
+            <th>Password</th>
+        </tr>
+        <tr>
+            <td>Admin</td>
+            <td>Max</td>
+            <td>111111</td>
+        </tr>
+        <tr>
+            <td>User</td>
+            <td>user</td>
+            <td>111111</td>
+        </tr>
+    </table>
     <p><a class="btn btn-primary btn-lg" href="@Url.Action("Register", "Home")" role="button">Register Now</a></p>
     <p class="text-success">Latest Build - @ViewBag.date</p>
 </div>
