--- a/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
@@ -8,6 +8,9 @@
 
 <h2>Create List</h2>
 <p class="text-danger">
+    @Html.Raw(ViewBag.ErrorMsg)
+</p>
+<p class="text-info">
     @Html.Raw(ViewBag.ActionMsg)
 </p>
 <div class="col-md-10">
@@ -15,7 +18,6 @@
     {
         @Html.AntiForgeryToken()
         <div class="form-horizontal">
-            <h4>ListVM</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
