make the register email unique

--- a/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
@@ -6,16 +6,15 @@
 
 
 @using (Html.BeginForm("ForgotPassword", "Home", new { ReturnUrl = ViewBag.ReturnUrl },
-                                    FormMethod.Post, new { @class = "col-lg-4 col-lg-offset-4" }))
+                                    FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" }))
 {
     // @Html.AntiForgeryToken()
-    <h2>Forgot Your Password</h2>
+    <h3 class="text-center">Forgot Your Password</h3>
 
     <div class="form-horizontal">
-        <div class="form-group">
-                <p>Please submit the your email address</p>
-                <input type="text" name="email" class="form-control" placeholder="Email"/><br />
-                <input type="submit" value="Submit" class="form-control"/>
+        <div class="form-group text-center">
+            <input type="text" name="email" class="form-control" placeholder="Enter your account email"/><br />
+            <button class="btn btn-primary" type="submit">Submit</button><br />
         </div>
         @{
             if (ViewBag.Fail!=null)
