--- a/OneListApplication/OneListApplication/Views/Home/Login.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Login.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="container">
-    <h4 class="text-center">Login</h4>
+    <h3 class="text-center">Login</h3>
 
     <div class="tab-content">
      <div class="tab-pane active" id="login">
@@ -35,11 +35,11 @@
                         <input name="rememberMe" type="checkbox" value="true"> Remember Me
                     </label>
                 </div>
-                <button class="btn btn-primary btn-signin" type="submit">Sign in</button><br />
-                <div class="text-right forget-pw">
+                <div class="text-center">
+                    <button class="btn btn-primary btn-signin" type="submit">Sign in</button><br />
                     @Html.ActionLink("Forgot Password", "ForgotPassword", "Home")
                 </div>
-            </div>
+                </div>
             }
         </div>
     </div>
