--- a/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
@@ -5,28 +5,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Reset Password</h2>
 
 @using (Html.BeginForm("ResetPassword", "Home", new { ReturnUrl = ViewBag.ReturnUrl },
-                        FormMethod.Post, new { @class = "col-lg-4 col-lg-offset-4" }))
+                                    FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" }))
 {
+    <h3 class="text-center">Reset Password</h3>
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
-            <div class="form-group">
-                @*<label>Password:</label>*@
-                @*<input type="text" name="password" class="form-control" placeholder="Password"/><br>*@
-                @*<label>Password Confirm:</label>*@
-                @*<input type="text" name="passwordConfirm" class="form-control" placeholder="Confirm Password" /><br />*@
+            <div class="form-group text-center">
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "New Password", @name= "password" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-
-    @*<input type="password" class="form-control" placeholder="Create Password" required><br>*@
                 @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", @placeholder = "Comfirm Password", @name = "passwordConfirm" } })
                 @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
                 <div class="g-recaptcha inp50" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>                
                 <input type="hidden" name="passwordToken" value="@ViewBag.PasswordToken" />
                 <input type="hidden" name="userID" value="@ViewBag.UserID" />
-                <input type="submit" value="Submit" /><br />
+                <button class="btn btn-primary" type="submit">Reset</button><br />
                 @Html.Raw(ViewBag.Result)
           </div>
         </div>
