--- a/OneListApplication/OneListApplication/Views/Item/CreateItem.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/CreateItem.cshtml
@@ -36,7 +36,9 @@
                 @Html.LabelFor(model => model.ItemCategory, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownListFor(m => m.ItemCategory, Model.ItemCategoryList, htmlAttributes: new { @class = "form-control" })
+                    <p>*Items cannot be created without categories</p>
                 </div>
+                
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
