--- a/OneListApplication/OneListApplication/Views/Home/AddUserToRole.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/AddUserToRole.cshtml
@@ -5,25 +5,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>AddUserToRole</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <div class="form-horizontal text-center form-signin">
+        <h3>Add User To Role</h3>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-            </div>
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "User Email" } })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.RoleName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
                 @{
                     List<SelectListItem> listItems = new List<SelectListItem>();
                     listItems.Add(new SelectListItem
@@ -35,28 +29,10 @@
                 }
 
                 @Html.DropDownListFor(model => model.RoleName, listItems, "-- Select Status --")
-            </div>
         </div>
-        @*<div class="form-group">
-            @{
-                OneListCAEntities context = new OneListCAEntities();
-                IEnumerable<SelectListItem> items = context.AspNetRoles.Select(c => new SelectListItem
-                {
-                    Value = c.Name,
-                    Text = c.Id
-                });
-                @Html.DropDownList("Roles", new List<SelectListItem>
-                    {
-                      new SelectListItem{ Text = "Home To School", Value = "0" },
-                      new SelectListItem{ Text = "School To Home", Value = "1" }
-                    }, new { onchange = "getAlldata()" })
 
-            }
-        </div>*@
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Assign" class="btn btn-default" />
-            </div>
+            <button class="btn btn-primary" type="submit">Assign</button>
         </div>
     </div>
  }
