--- a/OneListApplication/OneListApplication/Views/Home/DeleteUser.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/DeleteUser.cshtml
@@ -5,26 +5,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete User</h2>
 
 @using (Html.BeginForm("DeleteUser", "Home", new { ReturnUrl = ViewBag.ReturnUrl },
                                     FormMethod.Post, new { @class = "col-lg-4 col-lg-offset-4" }))
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <div class="form-horizontal text-center form-signin">
+        <h3>Delete User</h3>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder="User Email" } })
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Delete" class="btn btn-default" />
-            </div>
+            <button class="btn btn-primary" type="submit">Delete</button><br />
             @{
                 if (ViewBag.Fail != null)
                 {
