--- a/OneListApplication/OneListApplication/Views/Home/Login.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Login.cshtml
@@ -36,7 +36,7 @@
                     </label>
                 </div>
                 <div class="text-center">
-                    <button class="btn btn-primary btn-signin" type="submit">Sign in</button><br />
+                    <button class="btn btn-primary" type="submit">Sign in</button><br />
                     @Html.ActionLink("Forgot Password", "ForgotPassword", "Home")
                 </div>
                 </div>
