--- a/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
@@ -17,7 +17,7 @@
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
                 @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", @placeholder = "Comfirm Password", @name = "passwordConfirm" } })
                 @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-                <div class="g-recaptcha inp50" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>                
+                <div class="g-recaptcha" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>                
                 <input type="hidden" name="passwordToken" value="@ViewBag.PasswordToken" />
                 <input type="hidden" name="userID" value="@ViewBag.UserID" />
                 <button class="btn btn-primary" type="submit">Reset</button><br />
