--- a/OneListApplication/OneListApplication/Css/index.css
+++ b/OneListApplication/OneListApplication/Css/index.css
@@ -1,17 +1,76 @@
 ﻿/*
     font-family: 'Rubik', sans-serif;
     font-family: 'Montserrat', sans-serif;
+    font-family: 'Anton', sans-serif;
 */
 
+/*  link-colors */
+a,
+a:visited {
+    color:orangered;
+}
+
+/*  button-colors */
+.btn-bk {
+    background-color:black !important;
+    color:white;
+}
+
+/*  text-styles */
+h1, h2, h3, h4, h5, p, a, label, button {
+    font-family: 'Rubik', sans-serif;
+}
+
+input {
+    font-family: 'Rubik', sans-serif;
+}
+
+.text-red {
+    color:orangered;
+}
+
+/*  footer */
+footer {
+    margin-top: 30px;
+    color: slategrey;
+}
+
+/* nav bar */
+@media(max-width:768px) {
+    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+        background-color:#222;
+    }
+    .navbar-inverse .navbar-nav>li>a:hover {
+        background-color:#333 !important;
+    }
+}
+
+/* recaptach */
+.g-recaptcha > div {
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+/* forms */
+
+.form-control {
+    height: 45px !important;
+    border-radius: 15px;
+}
+
 body {
-    /*
-    background-image: url('../Content/image/bg1.jpg');
-    */
-    background-color: white !important;
+    /*background-color: white !important;*/
+}
+
+@media(max-width:768px) {
+    body {
+        padding-top: 0;
+    }
 }
 
 #page-wrapper {
-    border: 1px solid grey;
+    border-radius: 15px;
+    box-shadow: 1px 1px 3px #777777;
 }
 #coupon {
      border-left:1px solid grey;
@@ -50,6 +109,7 @@ li.nav-item a:hover{
 a.navbar-brand {
     color: transparent !important;
     margin-top: 10px;
+    margin-left: 20px !important;
 }
 
 .navbar-nav li a {
@@ -91,37 +151,52 @@ footer {
     text-align:center;
 }
 
-#dropdownMenu1 {
-    margin-top:18px;
-}
 
 .fa-user-circle-o {
     padding: 0;
     margin: 0 auto;
 }
 
-.navbar-left {
-    padding-top: 15px;
-    padding-left: 20px;
+.nav li {
+    text-align:center;
 }
 
-.navbar-left li a {
-    background-color: #444444;
-    border-radius: 15px;
-    color: white !important;
-    line-height:1 !important;
-    padding: 7px;
-    margin-left: 10px;
-    transition: 0.5s;
-    border: 2px solid black;
-}
-.navbar-left li a:hover{
-    border: 2px solid white;
+#dropdownMenu1 {
+    margin-top:18px;
 }
 
+@media(max-width:768px){
+    #dropdownMenu1 {
+        display: none;
+    }
+}
+@media(min-width:768px) {
 
-.collapse.navbar-collapse.navbar-ex1-collapse {
-    float: left;
+
+    .navbar-left {
+        padding-top: 15px;
+        padding-left: 20px;
+    }
+
+        .navbar-left li a {
+            background-color: #444444;
+            border-radius: 15px;
+            color: white !important;
+            line-height: 1 !important;
+            padding: 7px;
+            margin-left: 10px;
+            transition: 0.5s;
+            border: 2px solid black;
+        }
+
+            .navbar-left li a:hover {
+                border: 2px solid white;
+            }
+
+
+    .collapse.navbar-collapse.navbar-ex1-collapse {
+        float: left;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -147,4 +222,32 @@ footer {
 .forget-pw {
     padding-right: 10%;
     margin-bottom: 40px;
+}
+
+.project-description {
+    font-family: 'Rubik','Anton', sans-serif;
+    width: 90%;
+    margin: 20px 5%;
+    border-radius: 15px;
+    background-color: white;
+    padding: 20px;
+
+}
+.project-description h1 {
+    margin-bottom: 20px;
+}
+
+.project-description table {
+    max-width: 500px;
+    border: 2px solid slategrey;
+}
+
+.project-description .table > thead > tr >th {
+    background-color: slategrey;
+    color:white;
+    border-bottom: 2px solid slategrey !important;
+}
+
+.project-description table td {
+    color:slategrey;
 }
