--- a/OneListApplication/OneListApplication/Views/Home/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Index.cshtml
@@ -5,13 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="jumbotron">
+<div class="project-description">
     <div>
         <h1>Welcome to the OneList!</h1>
         <h4>Check Out Our<a href="~/Home/GetDesignDocument"> Design Document</a></h4>
     </div>
-    <p>Your ultimate solution to organize daily tasks, OneList can help increase efficency, register today for free.</p>
-    <table class="table">
+    <p>Task Managment web application built to help you organize daily tasks, increase efficency with OneList today.</p>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>User Role</th>
@@ -32,6 +32,6 @@
             </tr>
         </tbody>
     </table>
-    <p><a class="btn btn-primary btn-lg" href="@Url.Action("Register", "Home")" role="button">Register Now</a></p>
-    <p class="text-success">Latest Build - @ViewBag.date</p>
+    <p><a class="btn btn-bk btn-lg" href="@Url.Action("Register", "Home")" role="button">Register Now</a></p>
+    <p class="text-red">Latest Build - @ViewBag.date</p>
 </div>
