--- a/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberTable.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberTable.cshtml
@@ -1,8 +1,8 @@
 ﻿@model OneListApplication.ViewModels.SubscriberGroupVM
 
-
     <table class="table">
         <tr>
+            <th>Name</th>
             <th>Email</th>
             <th>User Type</th>
             <th>User Status</th>
@@ -11,6 +11,7 @@
         @foreach (var item in Model.allSubscribedUsers)
         {
             <tr>
+                <td>@Html.DisplayFor(modelItem => item.FullName)</td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
