--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -124,8 +124,8 @@
             </div>
 
             <div id="coupon" class="col-lg-4">
-                    <h3>Offers List:</h3>
-                    <span id='value1'><br /></span>
+                <h3>Our Specials</h3>
+                <span id='value1'><br /></span>
             </div>
             <!-- /#page-wrapper -->
         </div>
