--- a/OneListApplication/OneListApplication/Views/Item/_ItemPageTopNav.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/_ItemPageTopNav.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="col-md-2">
+﻿<div class="col-md-4">
     <ul class="nav navbar-nav side-nav">
         <li class="active">
             <a class="nav-link active" href="@Url.Action("ItemManagement", "Item")"><i class="fa fa-shopping-basket" aria-hidden="true"></i>&nbsp;&nbsp;All Items</a>
@@ -7,10 +7,10 @@
             <a class="nav-link" href="@Url.Action("CreateItem", "Item")"><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;Create Item</a>
         </li>
         <li>
-            <a class="nav-link" href="@Url.Action("ItemCategoryManagement", "Item")"><i class="fa fa-object-group" aria-hidden="true"></i>Categories</a>
+            <a class="nav-link" href="@Url.Action("ItemCategoryManagement", "Item")"><i class="fa fa-list-alt" aria-hidden="true"></i>Categories</a>
         </li>
         <li>
-            <a class="nav-link" href="@Url.Action("CreateItemCategory", "Item")"><i class="fa fa-object-ungroup" aria-hidden="true"></i>Create Category</a>
+            <a class="nav-link" href="@Url.Action("CreateItemCategory", "Item")"><i class="fa fa-plus" aria-hidden="true"></i>Create Category</a>
         </li>
     </ul>
 </div>
