--- a/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberSideBar.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/_SubscriberSideBar.cshtml
@@ -1,11 +1,11 @@
 ﻿
-<div class="col-md-2">
+<div class="col-md-4 col-sm-12">
     <ul class="nav navbar-nav side-nav">
         <li>
             <a class="nav-link" href="@Url.Action("AddSubscriberGroup", "Subscriber")"><i class="fa fa-plus" aria-hidden="true"></i>Add Subscriber Group</a>
         </li>
         <li>
-            <a class="nav-link" href="@Url.Action("SubscriberGroupManagement", "Subscriber")"><i class="fa fa-object-group" aria-hidden="true"></i>Subscriber Groups</a>
+            <a class="nav-link" href="@Url.Action("SubscriberGroupManagement", "Subscriber")"><i class="fa fa-list-alt" aria-hidden="true"></i>Subscriber Groups</a>
         </li>
     </ul>
 </div>
