--- a/OneListApplication/OneListApplication/Css/sb-admin.css
+++ b/OneListApplication/OneListApplication/Css/sb-admin.css
@@ -117,14 +117,16 @@ ul.alert-dropdown {
 
 @media(min-width:768px) {
     .side-nav {
-        width: 200px;
-            float: right;
-    margin-right: 30px;
+        background-color: white;
+        padding: 15px;
+        border-radius: 15px;
+        box-shadow: 1px 1px 2px #777;
+        float: right;
+        margin-right: 30px;
     }
     .side-nav>li>a {
         padding: 0 8px;
         margin-bottom: 10px;
-        text-align:center;
         border-radius: 10px;
         font-size: 1.1em;
         height: 40px;
@@ -134,11 +136,17 @@ ul.alert-dropdown {
     .side-nav li a:hover,
     .side-nav li a:focus {
         outline: none;
+        color: orangered;
+        background-color:white;
     }
 }
 
 .side-nav>li>ul {
     padding: 0;
+}
+
+.side-nav > li {
+    width: 100%;
 }
 
 .side-nav>li>ul>li>a {
