--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -54,21 +54,21 @@
                     <div class="col-md-12 col-sm-12">
                         <h4>To Do</h4>
                         <ul>
-                            <li><a href="#">Item Category detail page to show items associated</a></li>
                             <li><a href="#">Not to show expired coupons from API</a></li>
                             <li><a href="#">CSS: mobile responsive</a></li>
                             <li><a href="#">Add Validation/Error message for all</a></li>
                             <li><a href="#">User Profile Edit currently not server side validation</a></li>
                             <li><a href="#">Assign Roles -> generate roles from db to dropdown</a></li>
                             <li><a href="#">Make sure all users need to fill in first and last names</a></li>
-                            <li><a href="#">Fix typo in database</a></li>
                             <li><a href="#">Dummy Data cleanup in DB</a></li>
                             <li><a href="#">Clean up codes</a></li>
                             <li><a href="#">Organize code with repos</a></li>
                         </ul>
                         <h4>Nice-To-Have</h4>
                         <ul>
+                            <li><a href="#">Add scroll to API part</a></li>
                             <li><a href="#">Pagination on all Tables</a></li>
+                            <li><a href="#">Fix typo in database</a></li>
                         </ul>
                     </div>
                 </div>
